--- a/template/passport.yml
+++ b/template/passport.yml
@@ -1,30 +1,27 @@
 name: "Passport"
 source: "../template_sources/passport.png"
-features:
+keypoints:
   - id: rf_symbol
-    pattern: true
     x: 1600
     y: 50
     w: 170
     h: 170
   - id: photo_security_corner
-    pattern: true
     x: 100
     y: 180
     w: 100
     h: 100
   - id: photo_security_bottom
-    pattern: true
     x: 90
     y: 660
     w: 100
     h: 100
   - id: photo_security_right
-    pattern: true
     x: 570
     y: 180
     w: 100
     h: 100
+features:
   - id: last_name
     x: 808
     y: 140
