--- a/template/passport.yml
+++ b/template/passport.yml
@@ -2,58 +2,58 @@ id: "passport"
 name: "Passport"
 source: "../template_sources/passport.png"
 keypoints:
-  - id: rf_symbol
+  rf_symbol:
     x: 1600
     y: 50
     w: 170
     h: 170
-  - id: photo_security_corner
+  photo_security_corner:
     x: 100
     y: 180
     w: 100
     h: 100
-  - id: photo_security_bottom
+  photo_security_bottom:
     x: 90
     y: 660
     w: 100
     h: 100
-  - id: photo_security_right
+  photo_security_right:
     x: 570
     y: 180
     w: 100
     h: 100
 features:
-  - id: last_name
+  last_name:
     x: 808
     y: 140
     w: 800
     h: 200
-  - id: first_name
+  first_name:
     x: 808
     y: 340
     w: 800
     h: 90
-  - id: father_name
+  father_name:
     x: 808
     y: 420
     w: 800
     h: 90
-  - id: sex
+  sex:
     x: 737
     y: 519
     w: 213
     h: 86
-  - id: birthday
+  birthday:
     x: 1120
     y: 520
     w: 620
     h: 87
-  - id: place_of_birth
+  place_of_birth:
     x: 827
     y: 597
     w: 878
     h: 342
-  - id: mrz
+  mrz:
     x: 111
     y: 968
     w: 1713
