An optimal transformation bound now gets found automatically

--- a/template/passport.yml
+++ b/template/passport.yml
@@ -50,11 +50,31 @@ features:
     h: 87
   place_of_birth:
     x: 827
-    y: 597
+    y: 600
     w: 878
-    h: 342
+    h: 327
   mrz:
     x: 111
-    y: 968
+    y: 930
     w: 1713
-    h: 226
+    h: 260
+  face:
+    x: 180
+    y: 280
+    w: 475
+    h: 600
+  id_1:
+    x: 1760
+    y: 256
+    w: 80
+    h: 132
+  id_2:
+    x: 1760
+    y: 420
+    w: 80
+    h: 132
+  id_3:
+    x: 1760
+    y: 580
+    w: 80
+    h: 300
