Implemented and polished two supervision engines

--- a/template/passport.yml
+++ b/template/passport.yml
@@ -20,6 +20,8 @@ keypoints:
     h: 580
 matching:
   engine: flann
+supervision:
+  engine: orthogonal_linear_regression # Available engines: orthogonal_linear_regression, least_squares_linear_regression
   constraints:
     # The 'min_weight' constraint enforces the specified keypoints to achieve at least a certain amount of matches
     min_weight:
