--- a/template/passport.yml
+++ b/template/passport.yml
@@ -21,7 +21,8 @@ keypoints:
 matching:
   engine: flann
 supervision:
-  engine: orthogonal_linear_regression # Available engines: orthogonal_linear_regression, least_squares_linear_regression
+  # Available engines: orthogonal_regression, least_squares_regression
+  engine: orthogonal_regression
   constraints:
     # The 'min_weight' constraint enforces the specified keypoints to achieve at least a certain amount of matches
     min_weight:
