Implemented supervision engine specific configuration checking, other improvements.

--- a/template/passport.yml
+++ b/template/passport.yml
@@ -23,9 +23,11 @@ matching:
 supervision:
   # Available engines: orthogonal_regression, least_squares_regression, combinatorial
   engine: combinatorial
-  # config:
-  #   # Here you can speficy engine-specific configurations
-  #   combinatorial: {}
+  config:
+    # Here you can speficy engine-specific configurations
+    combinatorial:
+      min_match_factor: 0.1
+      max_transformation_error: 20
 
   # The supervision engine may produce multiple results
   # Using this option, you can speficy how the final result should be chosen
