--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,6 @@ jobs:
           key: ${{ github.ref }}
           path: .cache
       - run: pip install mkdocs-material
-      - run: pip install pillow cairosvg
+      - run: pip install mkdocs-material[imaging]
+      - run: pip install mkdocs-minify-plugin
       - run: mkdocs gh-deploy --force
