--- a/demo/templates/driver_license_ru.yml
+++ b/demo/templates/driver_license_ru.yml
@@ -4,7 +4,7 @@ id: "driver_license_ru"
 name: "Driver License RU"
 # This is the path to the example document you want to use as a base for the template.
 # The path can be absolute or relative. If it is relative, then it will be resolved relative to the location of the current file.
-source: "driver_license_ru.jpg"
+source: "../template_images/driver_license_ru.jpg"
 # A list of keypoints located in the template source image specified above.
 # A keypoint is a rectangular region that should be present in all documents of this kind, and that
 # should be used to find correspondences between the position of the given image and the positions in the template source image.
@@ -59,6 +59,11 @@ matching:
   # positions of the given image and those of the template source image provided above.
   # Available engines: sift_flann
   engine: sift_flann
+  # Engine-specific configuration
+  config:
+    # Configuration specific to the `sift_flann` matching engine.
+    sift_flann:
+      sensitivity: 0.7
 # Supervision configuration
 # Supervision is the process of unifying the given document image with the template source,
 # based on the (partially unreliable) information received from the matching algorithm
