--- a/demo/templates/id_de.yml
+++ b/demo/templates/id_de.yml
@@ -1,10 +1,10 @@
 # This is the ID of the template. It is needed to identify this template in the API and must be alphanumeric and unique.
-id: "id_de"
+id: "example"
 # The name of the template, as should be displayed to the user
-name: "German ID Card"
+name: "Example"
 # This is the path to the example document you want to use as a base for the template.
 # The path can be absolute or relative. If it is relative, then it will be resolved relative to the location of the current file.
-source: "SPECIFY A PATH TO THE SOURCE FILE HERE"
+source: "../template_images/identity_card_de.jpg"
 # A list of keypoints located in the template source image specified above.
 # A keypoint is a rectangular region that should be present in all documents of this kind, and that
 # should be used to find correspondences between the position of the given image and the positions in the template source image.
@@ -33,6 +33,11 @@ matching:
   # positions of the given image and those of the template source image provided above.
   # Available engines: sift_flann
   engine: sift_flann
+  # Engine-specific configuration
+  config:
+    # Configuration specific to the `sift_flann` matching engine.
+    sift_flann:
+      sensitivity: 0.7
 # Supervision configuration
 # Supervision is the process of unifying the given document image with the template source,
 # based on the (partially unreliable) information received from the matching algorithm
@@ -41,6 +46,7 @@ supervision:
   # positions of the given image and those of the template source image provided above.
   # Available engines: orthogonal_regression, least_squares_regression, combinatorial
   engine: combinatorial
+  # Engine-specific configuration
   config:
     # Here you can speficy engine-specific configurations
     combinatorial:
