Fixed documentation build errors

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,7 @@ plugins:
       default_handler: python
       handlers:
         python:
+          paths: [src]
           options:
             docstring_style: google
             show_source: true
@@ -93,9 +94,7 @@ nav:
   - Home: index.md
   - "Getting Started": getting-started.md
   - Documentation: documentation.md
-  - API: api.md
-  - Reference:
-      - mkdocstrings-python: reference/
+  - "API Reference": reference/
 
 copyright: |
   Copyright &copy; 2023-2024 <a href="https://github.com/ZeroBone" target="_blank" rel="noopener">Alexander Mayorov</a>
