--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ build-backend = "pdm.backend"
 [tool.pdm.scripts]
 docs-serve = "mkdocs serve"
 docs-build = "mkdocs build"
+docs-deploy = "mkdocs gh-deploy --force"
 
 [tool.pdm.dev-dependencies]
 doc = [
