Improve documentation, fixed `officialeye create` command.

--- a/demo/templates/passport_ru.yml
+++ b/demo/templates/passport_ru.yml
@@ -127,30 +127,9 @@ supervision:
   # The `best_mse` strategy finds the result which has the lowest mean squared error when translating template points to target points
   # The `best_score` strategy returns the result with the highest score (what `score` represents depends on the supervision engine)
   result: best_score
-feature_classes:
-  line_with_text:
-    abstract: yes
-    mutators:
-      - id: non_local_means_denoising
-        config:
-          colored: yes
-    interpretation:
-      method: ocr_tesseract
-      config:
-        config: --dpi 10000 --oem 3 --psm 6
-  line_with_russian_text:
-    inherits: line_with_text
-    interpretation:
-      config:
-        lang: rus
-  line_with_english_text:
-    inherits: line_with_text
-    interpretation:
-      config:
-        lang: eng
 
 # A list of features located in the template source image specified above.
-# A feature is a rectangular region containing any information of interest, such as text.
+# A feature is a rectangular region containing any information of interest, such as text, location of an embedded photo, etc.
 # In other words, the corresponding regions in the target image will be found during document analysis.
 features:
   last_name_line1:
@@ -224,3 +203,27 @@ features:
     y: 123
     w: 177
     h: 243
+
+# A feature class can be used to group similar features together
+# Feature classes are identified by a unique name, and can inherit other classes.
+feature_classes:
+  line_with_text:
+    abstract: yes
+    mutators:
+      - id: non_local_means_denoising
+        config:
+          colored: yes
+    interpretation:
+      method: ocr_tesseract
+      config:
+        config: --dpi 10000 --oem 3 --psm 6
+  line_with_russian_text:
+    inherits: line_with_text
+    interpretation:
+      config:
+        lang: rus
+  line_with_english_text:
+    inherits: line_with_text
+    interpretation:
+      config:
+        lang: eng
