--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,5 +20,5 @@ jobs:
       # install PDM
       - run: curl -sSL https://pdm-project.org/install-pdm.py | python3 -
       # install dependencies
-      - run: pdm install --dev
+      - run: pdm install
       - run: pdm run docs-deploy
