--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,5 @@ jobs:
       - run: curl -sSL https://pdm-project.org/install-pdm.py | python3 -
       # install dependencies
       - run: pdm install
+      # deploy documentation
       - run: pdm run docs-deploy
