--- a/demo/templates/driver_license_ru.yml
+++ b/demo/templates/driver_license_ru.yml
@@ -5,50 +5,66 @@ name: "Driver License RU"
 # This is the path to the example document you want to use as a base for the template.
 # The path can be absolute or relative. If it is relative, then it will be resolved relative to the location of the current file.
 source: "../template_images/driver_license_ru.jpg"
+mutators:
+  # A list of mutators that should be applied to the above template source image before the unification phase
+  source:
+    - id: clahe
+  # A list of mutators that should be applied to the input image before the unification phase
+  target:
+    - id: clahe
 # A list of keypoints located in the template source image specified above.
 # A keypoint is a rectangular region that should be present in all documents of this kind, and that
 # should be used to find correspondences between the position of the given image and the positions in the template source image.
 keypoints:
   rus_symbol:
-    x: 276
-    y: 66
-    w: 375
-    h: 219
+    x: 138
+    y: 33
+    w: 187
+    h: 109
     matches:
       min: 2
-      max: 40
+      max: 30
   title:
-    x: 906
-    y: 111
-    w: 1584
-    h: 140
+    x: 453
+    y: 55
+    w: 792
+    h: 70
     matches:
-      min: 5
-      max: 75
+      min: 30
+      max: 50
   heading_bar:
-    x: 882
-    y: 309
-    w: 192
-    h: 1221
+    x: 441
+    y: 154
+    w: 96
+    h: 610
     matches:
-      min: 0
-      max: 40
+      min: 10
+      max: 30
   heading_4b:
-    x: 1605
-    y: 864
-    w: 135
-    h: 99
+    x: 802
+    y: 432
+    w: 67
+    h: 49
     matches:
-      min: 0
+      min: 1
       max: 10
   heading_67:
-    x: 117
-    y: 1326
-    w: 102
-    h: 213
+    x: 58
+    y: 663
+    w: 51
+    h: 106
+    matches:
+      min: 5
+      max: 10
+  b_b1:
+    x: 531
+    y: 681
+    w: 141
+    h: 78
     matches:
       min: 0
-      max: 15
+      max: 20
+
 # Matching configuration
 # Matching is the process of finding equal patterns in the given image and the template source image,
 # thus establishing correspondences between positions.
@@ -83,7 +99,7 @@ supervision:
       # The combinatorial engine uses an affine linear transformation model to represent the way the document is located in the image provided.
       # It then chooses at least `min_match_factor` * (total amount of matches) matches that cause the data to fit the model, up to the error
       # specified here, measured in pixels along one of the axis. Thus, the lower this value is, the higher will be the quality of the
-      # combinatorial supervision engine's output. On the other hand, a very small value may increase
+      # combinatorial supervision engine's output. On the other hand, a very small value will increase
       # the risk of wrongfully not detecting a document at all.
       # Recommended value: between 2 and 10 pixels
       max_transformation_error: 5
@@ -102,94 +118,94 @@ supervision:
 # In other words, the corresponding regions in the target image will be found during document analysis.
 features:
   last_name_ru:
-    x: 1080
-    y: 321
-    w: 1200
-    h: 90
+    x: 540
+    y: 160
+    w: 600
+    h: 45
     class: line_with_russian_text
   last_name_en:
-    x: 1080
-    y: 400
-    w: 1200
-    h: 70
+    x: 540
+    y: 200
+    w: 600
+    h: 35
     class: line_with_english_text
   name_ru:
-    x: 1080
-    y: 470
-    w: 1200
-    h: 90
+    x: 540
+    y: 235
+    w: 600
+    h: 45
     class: line_with_russian_text
   name_en:
-    x: 1080
-    y: 550
-    w: 1200
-    h: 70
+    x: 540
+    y: 275
+    w: 600
+    h: 35
     class: line_with_english_text
   birthday:
-    x: 1080
-    y: 620
-    w: 1200
-    h: 90
+    x: 540
+    y: 310
+    w: 600
+    h: 45
     class: line_with_english_text
   place_of_birth_ru:
-    x: 1080
-    y: 700
-    w: 1200
-    h: 80
+    x: 540
+    y: 350
+    w: 600
+    h: 40
     class: line_with_russian_text
   place_of_birth_en:
-    x: 1080
-    y: 780
-    w: 1200
-    h: 70
+    x: 540
+    y: 390
+    w: 600
+    h: 35
     class: line_with_english_text
   issue_date:
-    x: 1080
-    y: 860
-    w: 500
-    h: 90
+    x: 540
+    y: 430
+    w: 250
+    h: 45
     class: line_with_english_text
   expiry_date:
-    x: 1750
-    y: 860
-    w: 500
-    h: 90
+    x: 875
+    y: 430
+    w: 250
+    h: 45
     class: line_with_english_text
   issue_authority_ru:
-    x: 1080
-    y: 950
-    w: 1200
-    h: 80
+    x: 540
+    y: 475
+    w: 600
+    h: 40
     class: line_with_russian_text
   issue_authority_en:
-    x: 1080
-    y: 1020
-    w: 1200
-    h: 80
+    x: 540
+    y: 510
+    w: 600
+    h: 40
     class: line_with_english_text
   identifier:
-    x: 1080
-    y: 1100
-    w: 1200
-    h: 100
+    x: 540
+    y: 550
+    w: 600
+    h: 50
     class: line_with_english_text
   issue_place_ru:
-    x: 1080
-    y: 1190
-    w: 1200
-    h: 80
+    x: 540
+    y: 595
+    w: 600
+    h: 40
     class: line_with_russian_text
   issue_place_en:
-    x: 1080
-    y: 1260
-    w: 1200
-    h: 80
+    x: 540
+    y: 630
+    w: 600
+    h: 40
     class: line_with_english_text
   face:
-    x: 174
-    y: 384
-    w: 627
-    h: 921
+    x: 87
+    y: 192
+    w: 313
+    h: 460
 
 feature_classes:
   line_with_text:
